--- a/lesson_04/code/Homework04_02/styles/style.css
+++ b/lesson_04/code/Homework04_02/styles/style.css
@@ -2,14 +2,15 @@
 .external {
     background-color: black;
     height: 400px;
-    width: 800px;
+    width: 1000px;
 }
 
 button {
     background-color: blue;
     height: 200px;
-    width: 600px;
+    width: 800px;
     margin: 100px;
+    border-radius: 15px;
 
 
 }
