--- a/lesson_05/code/example01/styles/style.css
+++ b/lesson_05/code/example01/styles/style.css
@@ -12,10 +12,12 @@
 header {
     background-color: antiquewhite;
     position: sticky;
+    /* sticky - закрепляет блок на странице */
     top: 0;
     margin-top: 50px;
     height: 50px;
     z-index:20;
+    /* z-index- чтобы он был сверху на тексте  у кого больше индекс, тот сверху*/
     
 }
 
