--- a/lesson_07/example01/styles/style.css
+++ b/lesson_07/example01/styles/style.css
@@ -7,14 +7,15 @@
     background-color:beige;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     /* height: 100vh; */
     width: 100%;
     max-width: 1000px;
     margin: 5px auto;
     flex-wrap: wrap;
     gap: 10px;
-    align-items: center;
+    align-content: flex-start;
+    height: 100vh;
     
     
 }
@@ -28,29 +29,57 @@
     background-size: cover;
     background-position: center;
     position: relative;
-    
+    display: flex;
+    align-items: flex-end;
 }
 
-.box1{
-    background-image: url("../image/11_720.png");
-   
-   
-}
+
 .text{
     background-color: yellow;
      position: absolute;
      right: 5px;
-     font-size: larger;
      top: 5px;
      padding: 2px;
+     text-align: center;
+     border-radius: 2px;
+  
+    }
+    .block{
+        padding-left: 10px;
+        padding-bottom: 4px;
+        display: flex;
+        flex-direction: column;
+        background:linear-gradient(180deg, transparent, black);
+    }
+    .year {
+        font-size: 64px;
+        font-style: normal;
+        font-weight: bold;
+        color: white;
+    }
+    .title {
+        font-size: 24px;
+        font-weight:normal;
+        font-weight: bold;
+        color: yellow;
+    }
+    .description {
 
-     
-
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 0.3s ease;
+        max-height: none;
+        color:white;
+    }
+.box1{
+        background-image: url("../image/11_720.png");
+       
+       
+    }
     
-
-
-
-}
 .box2 {
     background-image: url("../image/club_720.png");
     
