--- a/lesson_06/Homework06/exaple02/styles/style.css
+++ b/lesson_06/Homework06/exaple02/styles/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: 5px;
+    margin: 0px;
     padding: 0;
     text-align: center;
     font-size: 24px;
@@ -11,8 +11,7 @@
 .header {
     background-color: rgb(77, 174, 219);
     height: 150px;
-    
-    
+    margin: 5px;
     border-radius: 10px;
 
 }
@@ -20,6 +19,7 @@
     background-color:rgb(219, 192, 179);
     border-radius: 10px;
     height: 50px;
+    margin: 5px;
    
 }
 .block{
@@ -27,6 +27,7 @@
     flex-direction: row;
     height: calc(100vh - 385px);
     justify-content: flex-start;
+    margin: 5px;
 }
 .interior{
     width: 75%;
@@ -49,11 +50,12 @@
     width: 25%;
     background-color: rgb(231, 205, 170);
     border-radius:10px ;
+    margin: 0 0 0 5px;
 }
 
 .footer {
     background-color:rgb(142, 228, 142);
     height: 150px;
     border-radius: 10px;
- 
+    margin: 5px;
 }
