--- a/lesson_06/Homework06/exaple02/styles/style.css
+++ b/lesson_06/Homework06/exaple02/styles/style.css
@@ -45,6 +45,7 @@
     background-color:lightpink;
     border-radius: 5px;
     height: calc((100vh - 385px)/2);
+    margin: 5px 0 0 0;
 }
 .aside {
     width: 25%;
