--- a/lesson_15/styles/style.css
+++ b/lesson_15/styles/style.css
@@ -61,3 +61,7 @@
     text-decoration: line-through;
     background-color: darkgray;
 }
+/* .completed {
+    text-decoration: line-through;
+    color: gray;
+} */
